--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="author" content="Rohith S P" />
+    <meta name="author" content="group36" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#ffffff" />
     <title>live Algorithms</title>
     <meta
       name="description"
-      content="GUI built using React Framework to visualize Pathfinding Algorithms and Maze Generation Algorithms."
+      content="GUI built using React Framework to visualize  Algorithms"
     />
     <meta
       prefix="og: http://ogp.me/ns#"
@@ -19,7 +19,7 @@
     <meta
       prefix="og: http://ogp.me/ns#"
       property="og:description"
-      content="GUI built using React Framework to visualize Pathfinding Algorithms and Maze Generation Algorithms."
+      content="GUI built using React Framework to visualize Algorithms."
     />
     <meta
       prefix="og: http://ogp.me/ns#"
